--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,3 +1,4 @@
+/*
 .navbar-default {
     background: rgb(27, 162, 240);
     color: white;
@@ -11,7 +12,7 @@
     cursor: default;
     font-size: 1.5em;
     color: white;
-    width: 150px;
+    width: 220px;
     text-align: center;
 }
 
@@ -42,3 +43,4 @@
     flex-direction: row;
     flex-grow: 1;
 }
+*/
