--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,9 @@
 <nav id="navbar" class="navbar navbar-default " *ngIf="!currentUser">
-  <a class="nav navbar-brand">{{title}}</a>
-  <ul id="main-nav" class="nav navbar-nav">
-    <li class="nav-item">
-      <a routerLink="/register">Register</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="/login">Login</a>
-    </li>
-  </ul>
+  <div id="main-nav" class="nav navbar-nav">
+      <p class="nav navbar-brand">{{title}}</p>
+      <a class="nav-item nav-link" routerLink="/register">Register</a>
+      <a  class="nav-item nav-link" routerLink="/login">Login</a>
+  </div>
 </nav>
 
 <nav id="navbar" class="navbar navbar-default " *ngIf="currentUser">
