--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -30,8 +30,8 @@
                     <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
                     Login
                 </button>
-                <a routerLink="/register" class="btn btn-link">Register</a>
-                <a routerLink="/resetpassword" class="btn btn-link">Rest Password</a>
+                <a routerLink="/home" id="register" class="btn btn-link btn-primary">Register</a>
+                <!-- <a routerLink="/resetpassword" class="btn btn-link">Rest Password</a> -->
             </div>
         </form>
     </div>
