--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div id="main-container" class="container-fluid">
-  <div id="right">
+<div id="main-container" class="container-fluid" style="margin: 0px; padding: 0px;">
+  <div id="right" style="padding: 0px; margin: 0px;">
           <app-navbar></app-navbar>
           <div id="content">
               <router-outlet></router-outlet>
