--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,20 @@
-<nav id="navbar" class="navbar navbar-default " *ngIf="!currentUser">
+<!-- <nav id="navbar" class="navbar navbar-default " *ngIf="!currentUser">
   <div id="main-nav" class="nav navbar-nav">
       <p class="nav navbar-brand">{{title}}</p>
       <a class="nav-item nav-link" routerLink="/register">Register</a>
-      <a  class="nav-item nav-link" routerLink="/login">Login</a>
+      <a class="nav-item nav-link" routerLink="/login">Login</a>
   </div>
-</nav>
+</nav> -->
 
-<nav id="navbar" class="navbar navbar-default " *ngIf="currentUser">
-  <a class="navbar-brand">Hello, {{currentUser.firstName}}!</a>
-  <ul id="main-nav" class="nav navbar-nav">
-    <li class="nav-item">
-      <a class="nav-item nav-link" routerLink="/post">Add a post</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-item nav-link" (click)="logout()">Logout</a>
-    </li>
-  </ul>
+<nav id="navbar" class="navbar navbar-default " *ngIf="!currentUser">
+  <a class="navbar-brand">{{title}}</a>
+  <div id="main-nav" class="nav navbar-nav">
+      <a class="nav-item nav-link" routerLink="#">Home</a>
+      <a class="nav-item nav-link" routerLink="#">Edit Personal Info</a>
+      <a class="nav-item nav-link" routerLink="#">Edit Insurance</a>
+      <a class="nav-item nav-link" routerLink="/post">Appointments</a>
+  </div>
+  <div class="nav navbar-nav" id="logout">
+      <a class="nav-item nav-link navbar-right" (click)="logout()">Logout</a>
+  </div>
 </nav>
