--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,8 +1,7 @@
 <!-- CARD IMAGE -->
 
-
 <!-- CARD  -->
-<div class="card">
+<!-- <div class="card">
   <div class="card-header">
     <h5>Profile</h5>
   </div>
@@ -28,9 +27,34 @@
 
 
     <div class="row align-items-center m-4">
-      <h5 class="col-3">Occupation</h5>
+      <h5 class="col-3">Address</h5>
       <h5 class="col-4">{{currentUser.occupation}}</h5>
     </div>
 
+  </div>
+</div> -->
+<div class="container">
+  <div class="panel-group">
+    <div class="panel panel-primary">
+      <div class="panel-heading">Patient Information</div>
+      <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-4 col-md-4">
+            <p>
+              John Doe <br />
+              January 30, 1974 <br />
+              John.Doe@gmail.com
+            </p>
+          </div>
+          <div class="col-sm-2 col-md-4">
+            <p>
+              Address: Unknown
+              <br />Home:   (555)555-5555
+              <br />Mobile: (555)545-5454
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
