--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,13 +4,14 @@
       <a class="nav-item nav-link" routerLink="/register">Register</a>
       <a class="nav-item nav-link" routerLink="/login">Login</a>
   </div>
+  (click)="openModal()"
 </nav> -->
 
 <nav id="navbar" class="navbar navbar-default " *ngIf="!currentUser">
   <a class="navbar-brand">{{title}}</a>
   <div id="main-nav" class="nav navbar-nav">
       <a class="nav-item nav-link" routerLink="/home">Home</a>
-      <a class="nav-item nav-link" routerLink="#">Edit Personal Info</a>
+      <a class="nav-item nav-link" routerLink="#" (click)="openFormModal()">Edit Personal Info</a>
       <a class="nav-item nav-link" routerLink="#">Edit Insurance</a>
       <a class="nav-item nav-link" routerLink="/post">Appointments</a>
   </div>
