--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="col-sm-4 col-md-4">
             <p>
-              John Doe <br />
+              {{currentUser.firstName}} {{currentUser.lastName}} <br />
               January 30, 1974 <br />
               John.Doe@gmail.com
             </p>
