--- a/src/app/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/schedule-appointment/schedule-appointment.component.html
@@ -1,9 +1,12 @@
 <div style="padding: 7px">
   <form [formGroup]="myForm">
-    <p>
-        <!--dater picker code-->
-        date picker
-    </p>
+    <div>
+      <label class="control-label" for="date">Date</label>
+      <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
+    </div>
+    <div class="form-group"> <!-- Submit button -->
+      <button class="btn btn-primary " name="submit" type="submit">Submit</button>
+    </div>
   </form>
   <p *ngIf="myForm.valid">
     Your choice: {{myForm.value.chosenDate | date: 'dd/MM/y H:mm:ss'}}
