jwt impmented and working

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,7 @@
                     Login
                 </button>
                 <a routerLink="/register" id="register" class="btn btn-link btn-primary">Register</a>
-                <!-- <a routerLink="/resetpassword" class="btn btn-link">Rest Password</a> -->
+                <a routerLink="/test" class="btn btn-link">test</a>
             </div>
         </form>
     </div>
