--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <a class="nav-item nav-link" routerLink="/home">Home</a>
       <a class="nav-item nav-link" routerLink="#" (click)="openFormModal()">Edit Personal Info</a>
       <a class="nav-item nav-link" routerLink="/test">Edit Insurance</a>
-      <a class="nav-item nav-link" routerLink="/post">Appointments</a>
+      <a class="nav-item nav-link" routerLink="/appointment">Appointments</a>
   </div>
   <div class="nav navbar-nav" id="logout">
       <a class="nav-item nav-link navbar-right" (click)="logout()">Logout</a>
