--- a/src/app/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/schedule-appointment/schedule-appointment.component.html
@@ -1,16 +1,16 @@
-<div style="padding: 7px">
+<!-- <div style="padding: 7px">
   <form [formGroup]="myForm">
-    <div>
-      <label class="control-label" for="date">Date</label>
-      <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="text"/>
-    </div>
-    <div class="form-group"> <!-- Submit button -->
+    <mat-form-field class="example-full-width">
+      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker touchUi #picker></mat-datepicker>
+    </mat-form-field>
+    <div class="form-group">
       <button class="btn btn-primary " name="submit" type="submit">Submit</button>
     </div>
   </form>
   <p *ngIf="myForm.valid">
     Your choice: {{myForm.value.chosenDate | date: 'dd/MM/y H:mm:ss'}}
   </p>
+</div> -->
 
-
-</div>
