--- a/src/app/schedule-appointment/schedule-appointment.component.html
+++ b/src/app/schedule-appointment/schedule-appointment.component.html
@@ -2,10 +2,10 @@
   <form [formGroup]="myForm">
     <div>
       <label class="control-label" for="date">Date</label>
-      <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="Date"/>
+      <input class="form-control" id="date" name="date" placeholder="MM/DD/YYYY" type="Date"/>
     </div>
     <div class="form-group"> <!-- Submit button -->
-      <button class="btn btn-primary " name="submit" type="submit">Submit</button>
+      <button class="btn btn-primary " name="submit" type="submit" (click)="onSubmit()">Submit</button>
     </div>
   </form>
   <p *ngIf="myForm.valid">
