--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -18,47 +18,47 @@
             />
           </div>
           <div class="form-group">
-            <label for="lastName">Address Line 1</label>
+            <label for="address1">Address Line 1</label>
             <input
               type="text"
               class="form-control"
-              formControlName="lastName"
+              formControlName="address1"
             />
           </div>
         </div>
         <div class="row">
           <div class="form-group">
-            <label for="firstName">Date of Birth</label>
+            <label for="birthday">Date of Birth</label>
             <input
               type="text"
               class="form-control"
-              formControlName="firstName"
+              formControlName="birthday"
             />
           </div>
           <div class="form-group">
-            <label for="lastName">Address Line 2</label>
+            <label for="address2">Address Line 2</label>
             <input
               type="text"
               class="form-control"
-              formControlName="lastName"
+              formControlName="address2"
             />
           </div>
         </div>
         <div class="row">
           <div class="form-group">
-            <label for="firstName">Email</label>
+            <label for="email">Email</label>
             <input
               type="text"
               class="form-control"
-              formControlName="firstName"
+              formControlName="email"
             />
           </div>
           <div class="form-group">
-              <label for="firstName">Home Phone</label>
+              <label for="phonenumber">Home Phone</label>
               <input
                 type="text"
                 class="form-control"
-                formControlName="firstName"
+                formControlName="phonenumber"
               />
             </div>
 
@@ -81,11 +81,11 @@
               </select>
             </div>
           <div class="form-group">
-              <label for="lastName">Zip</label>
+              <label for="zipcode">Zip</label>
               <input
                 type="text"
                 class="form-control"
-                formControlName="lastName"
+                formControlName="zipcode"
               />
             </div>
         </div>
