--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   <div id="main-nav" class="nav navbar-nav">
       <a class="nav-item nav-link" routerLink="/home">Home</a>
       <a class="nav-item nav-link" routerLink="#" (click)="openFormModal()">Edit Personal Info</a>
-      <a class="nav-item nav-link" routerLink="#">Edit Insurance</a>
+      <a class="nav-item nav-link" routerLink="/insurance">Edit Insurance</a>
       <a class="nav-item nav-link" routerLink="/appointment">Appointments</a>
   </div>
   <div class="nav navbar-nav" id="logout">
