--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
   <a class="navbar-brand">{{title}}</a>
   <div id="main-nav" class="nav navbar-nav">
       <a class="nav-item nav-link" routerLink="/home">Home</a>
-      <a class="nav-item nav-link" routerLink="#" (click)="openFormModal()">Edit Personal Info</a>
+      <a class="nav-item nav-link" (click)="openFormModal()">Edit Personal Info</a>
       <a class="nav-item nav-link" routerLink="/insurance">Edit Insurance</a>
       <a class="nav-item nav-link" routerLink="/appointment">Appointments</a>
   </div>
