fixed edit user modal

--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -14,7 +14,7 @@
             <input
               type="text"
               class="form-control"
-              formControlName="firstName"
+              formControlName="fullName"
             />
           </div>
           <div class="form-group">
