--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="form-group">
-            <label for="firstName">Full Name</label>
+            <label for="fullName">Full Name</label>
             <input
               type="text"
               class="form-control"
