--- a/src/app/updateinsurance/updateinsurance.component.html
+++ b/src/app/updateinsurance/updateinsurance.component.html
@@ -1,1 +1,28 @@
-<p>updateinsurance works!</p>
+  <div class="form-group">
+    <label for="provider">Insurance Provider</label>
+    <input
+      type="text"
+      class="form-control"
+    />
+  </div>
+  <div class="form-group">
+    <label for="phonenumber">Phone Number</label>
+    <input
+      type="text"
+      class="form-control"
+    />
+  </div>
+  <div class="form-group">
+    <label for="type">Type</label>
+    <input
+      type="text"
+      class="form-control"
+    />
+  </div>
+  <div class="form-group">
+    <label for="policynumber">Policy Number</label>
+    <input
+      type="text"
+      class="form-control"
+    />
+  </div>
