fixed spacing in home page

--- a/src/app/medical-history/medical-history.component.html
+++ b/src/app/medical-history/medical-history.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="padding-top: 1.5em">
   <div class="panel-group">
     <div class="panel panel-primary">
-      <div class="panel-heading">Medical History</div>
+      <div class="panel-heading" style="padding-left: 10px"> Medical History</div>
       <div class="panel-body">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In viverra lectus tortor, non porttitor neque hendrerit nec. Nulla vel erat non magna tristique volutpat. Pellentesque gravida rhoncus varius. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla facilisi. Phasellus quis sapien facilisis, finibus mi id, venenatis mi. Vestibulum facilisis augue id mi sagittis venenatis. Maecenas quis quam id purus tristique eleifend eget eget risus. Suspendisse ultrices fermentum ante, id blandit purus euismod in. Nulla id interdum lectus, ut luctus neque. Nunc sit amet metus euismod, fermentum mi commodo, fringilla erat. Aliquam dignissim nisl pulvinar metus efficitur suscipit.
