edit user updates

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -41,16 +41,15 @@
         <div class="row">
           <div class="col-sm-4 col-md-4">
             <p>
-              {{currentUser.fullName}}<br />
-              {{currentUser.birthdate}} <br />
-              {{currentUser.email}}
+              {{currentUser.user.fullName}}<br />
+              {{currentUser.user.birthdate}} <br />
+              {{currentUser.user.email}}
             </p>
           </div>
           <div class="col-sm-2 col-md-4">
             <p>
-              {{currentUser.address1}} {{currentUser.address2}}
-              <br />Home:   {{currentUser.homePhone}}
-              <br />Mobile: {{currentUser.mobilePhone}}
+              {{currentUser.user.address1}} {{currentUser.user.address2}} {{currentUser.user.city}}, {{currentUser.user.state}} {{currentUser.user.zipcode}}
+              <br />Phone:   {{currentUser.user.homePhone}}
             </p>
           </div>
         </div>
