--- a/src/app/edituser/edituser.component.html
+++ b/src/app/edituser/edituser.component.html
@@ -28,11 +28,11 @@
         </div>
         <div class="row">
           <div class="form-group">
-            <label for="birthday">Date of Birth</label>
+            <label for="birthdate">Date of Birth</label>
             <input
               type="text"
               class="form-control"
-              formControlName="birthday"
+              formControlName="birthdate"
             />
           </div>
           <div class="form-group">
@@ -54,11 +54,11 @@
             />
           </div>
           <div class="form-group">
-              <label for="phonenumber">Home Phone</label>
+              <label for="homePhone">Home Phone</label>
               <input
                 type="text"
                 class="form-control"
-                formControlName="phonenumber"
+                formControlName="homePhone"
               />
             </div>
 
