--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -40,17 +40,14 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-sm-4 col-md-4">
-            <p>
-              {{currentUser.fullName}}<br />
-              {{currentUser.birthdate}} <br />
-              {{currentUser.email}}
-            </p>
+            <p>Patients Full Name: <span *ngIf="currentUser.fullName == patient.fullName">{{currentUser.fullName}}</span><span *ngIf="patient.fullName && patient.fullName != currentUser.fullName">{{patient.fullName}}</span></p>
+            <p *ngIf="patient">Birthdate: {{patient.birthdate}}</p>
+            <p>Email: <span *ngIf="!patient.email">{{currentUser.email}}</span><span *ngIf="patient.email">{{patient.email}}</span></p>
           </div>
           <div class="col-sm-2 col-md-4">
-            <p>
-              {{currentUser.address1}} {{currentUser.address2}}
-              <br />Home:   {{currentUser.homePhone}}
-              <br />Mobile: {{currentUser.mobilePhone}}
+            <p *ngIf="patient">Address: {{patient.address1}} {{patient.address2}} <br>
+              {{patient.city}}, {{patient.state}} {{patient.zipcode}}
+              <br />Home Phone:   {{patient.homePhone}}
             </p>
           </div>
         </div>
