--- a/src/app/updateinsurance/updateinsurance.component.html
+++ b/src/app/updateinsurance/updateinsurance.component.html
@@ -1,38 +1,40 @@
+<form [formGroup]="myForm" (ngSubmit)="submitForm()">
   <div class="form-group">
-    <label for="provider">Insurance Provider</label>
-    <input
-      type="text"
-      class="form-control"
-    />
+      <label for="provider">Insurance Provider</label>
+      <input
+        type="text"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="phonenumber">Phone Number</label>
+      <input
+        type="text"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="type">Type</label>
+      <input
+        type="text"
+        class="form-control"
+      />
+    </div>
+    <div class="form-group">
+      <label for="policynumber">Policy Number</label>
+      <input
+        type="text"
+        class="form-control"
+      />
+      <div id="btn-container" class="form-group col-md-6 p-3">
+        <button [disabled]="loading" class="btn btn-primary btn-sm">
+            <span
+                *ngIf="loading"
+                class="spinner-border spinner-border-sm mr-1"
+            ></span>
+            Submit
+        </button>
+        <a routerLink="/login" class="btn btn-link">Cancel</a>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="phonenumber">Phone Number</label>
-    <input
-      type="text"
-      class="form-control"
-    />
-  </div>
-  <div class="form-group">
-    <label for="type">Type</label>
-    <input
-      type="text"
-      class="form-control"
-    />
-  </div>
-  <div class="form-group">
-    <label for="policynumber">Policy Number</label>
-    <input
-      type="text"
-      class="form-control"
-    />
-    <div id="btn-container" class="form-group col-md-6 p-3">
-      <button [disabled]="loading" class="btn btn-primary btn-sm">
-          <span
-              *ngIf="loading"
-              class="spinner-border spinner-border-sm mr-1"
-          ></span>
-          Submit
-      </button>
-      <a routerLink="/login" class="btn btn-link">Cancel</a>
-  </div>
-</div>
+</form>
