--- a/src/app/updateinsurance/updateinsurance.component.html
+++ b/src/app/updateinsurance/updateinsurance.component.html
@@ -27,7 +27,7 @@
         class="form-control"
       />
       <div id="btn-container" class="form-group col-md-6 p-3">
-        <button [disabled]="loading" class="btn btn-primary btn-sm">
+        <button [disabled]="loading" class="btn btn-primary btn-sm" (click)="submitForm()">
             <span
                 *ngIf="loading"
                 class="spinner-border spinner-border-sm mr-1"
